nldl_derive/tests/ui/deserializable/nla-type-missing-annotation-fails.stderr
error: proc-macro derive panicked
 --> tests/ui/deserializable/nla-type-missing-annotation-fails.rs:3:28
  |
3 | #[derive(Debug, PartialEq, nldl::attr::Deserialize)]
  |                            ^^^^^^^^^^^^^^^^^^^^^^^
  |
  = help: message: Please annotate all enum variants with #[nla_type(..)]. Saw "Unknown" unannotated.
